@@ -516,12 +516,12 @@ class TaskBuffer:
 
     # retry job
     def retryJob(self,jobID,param,failedInActive=False,changeJobInMem=False,inMemJob=None,
-                 getNewPandaID=False,attemptNr=None):
+                 getNewPandaID=False,attemptNr=None,recoverableEsMerge=False):
         # get DB proxy
         proxy = self.proxyPool.getProxy()
         # update DB
         ret = proxy.retryJob(jobID,param,failedInActive,changeJobInMem,inMemJob,
-                             getNewPandaID,attemptNr)
+                             getNewPandaID,attemptNr,recoverableEsMerge)
         # release proxy
         self.proxyPool.putProxy(proxy)
         return ret
